--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,4 +1,5 @@
 dependencies:
+  espressif/esp_matter: "^1.3.0"
   espressif/cmake_utilities:
     version: 0.*
     rules: # will add "optional_component" only when all if clauses are True
