--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,12 +1,7 @@
 dependencies:
+#  espressif/esp_matter: "^1.3.0" # Enable for local IDE support
   espressif/button: "^3.4.0"
   espressif/led_strip: "^2.4.1"
-  espressif/esp_matter: "^1.3.0"
-  espressif/cmake_utilities:
-    version: 0.*
-    rules: # will add "optional_component" only when all if clauses are True
-      - if: "idf_version >=5.0"
-      - if: "target in [esp32c2]"
   utkumaden/esp-idf-bmx280:
     git: https://github.com/utkumaden/esp-idf-bmx280.git
     version: master
