Use ESP merged binary

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,58 +3,62 @@ image: espressif/esp-matter:latest_idf_v5.2.3
 stages:
   - build
 
+.build: &build
+  - version=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
+  - idf.py
+    -D SDKCONFIG_DEFAULTS="${SDK_CONFIG_FILE}"
+    -D CHIP_DEVICE_CONFIG_DEVICE_SOFTWARE_VERSION_STRING="${version:="0.0.0"}"
+    build
+  - esptool.py --chip ${ESP_CHIP} merge_bin -o SensAir.bin
+    0x0 build/bootloader/bootloader.bin
+    0xc000 build/partition_table/partition-table.bin
+    0x1d000 build/ota_data_initial.bin
+    0x20000 build/SensAir.bin
+
 build_esp32c6_thread:
   stage: build
-  script: |
-    version=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
-    idf.py \
-      -D SDKCONFIG_DEFAULTS="sdkconfig.defaults.esp32c6_thread" \
-      -D CHIP_DEVICE_CONFIG_DEVICE_SOFTWARE_VERSION_STRING="${version:="0.0.0"}" \
-      build
+  variables:
+    ESP_CHIP: esp32c6
+    SDK_CONFIG_FILE: sdkconfig.defaults.esp32c6
+  script: *build
   artifacts:
     paths:
-      - build/SensAir.bin
+      - SensAir.bin
   only:
     - /^v\d+\.\d+\.\d+$/
 
 build_esp32c6_wifi:
   stage: build
-  script: |
-    version=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
-    idf.py \
-      -D SDKCONFIG_DEFAULTS="sdkconfig.defaults.esp32c6_wifi" \
-      -D CHIP_DEVICE_CONFIG_DEVICE_SOFTWARE_VERSION_STRING="${version:="0.0.0"}" \
-      build
+  variables:
+    ESP_CHIP: esp32c6
+    SDK_CONFIG_FILE: sdkconfig.defaults.esp32c6_wifi
+  script: *build
   artifacts:
     paths:
-      - build/SensAir.bin
+      - SensAir.bin
   only:
     - /^v\d+\.\d+\.\d+$/
 
 build_esp32h2_thread:
   stage: build
-  script: |
-    version=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
-    idf.py \
-      -D SDKCONFIG_DEFAULTS="sdkconfig.defaults.esp32h2_thread" \
-      -D CHIP_DEVICE_CONFIG_DEVICE_SOFTWARE_VERSION_STRING="${version:="0.0.0"}" \
-      build
+  variables:
+    ESP_CHIP: esp32h2
+    SDK_CONFIG_FILE: sdkconfig.defaults.esp32h2
+  script: *build
   artifacts:
     paths:
-      - build/SensAir.bin
+      - SensAir.bin
   only:
     - /^v\d+\.\d+\.\d+$/
 
 build_esp32s3_wifi:
   stage: build
-  script: |
-    version=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
-    idf.py \
-      -D SDKCONFIG_DEFAULTS="sdkconfig.defaults.esp32s3_wifi" \
-      -D CHIP_DEVICE_CONFIG_DEVICE_SOFTWARE_VERSION_STRING="${version:="0.0.0"}" \
-      build
+  variables:
+    ESP_CHIP: esp32s3
+    SDK_CONFIG_FILE: sdkconfig.defaults.esp32s3
+  script: *build
   artifacts:
     paths:
-      - build/SensAir.bin
+      - SensAir.bin
   only:
     - /^v\d+\.\d+\.\d+$/
