--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,9 @@ stages:
   - build
 
 .build: &build
-  - version=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
-  - idf.py
-    -D SDKCONFIG_DEFAULTS="${SDK_CONFIG_FILE}"
-    -D CHIP_DEVICE_CONFIG_DEVICE_SOFTWARE_VERSION_STRING="${version:="0.0.0"}"
-    build
+  - VERSION=$(echo "$CI_COMMIT_TAG" | sed 's/^v//')
+  - sed -i 's/\(set(PROJECT_VER "\)\([^"]*\)\(")\)/\1'$VERSION'\3/' CMakeLists.txt
+  - idf.py -D SDKCONFIG_DEFAULTS="${SDK_CONFIG_FILE}" build
   - esptool.py --chip ${ESP_CHIP} merge_bin -o SensAir.bin
     0x0 build/bootloader/bootloader.bin
     0xc000 build/partition_table/partition-table.bin
